# services/event-service/src/main/java/it/uniupo/boardhub/eventservice/controller/dto/ErrorResponse.java
@@ -1,0 +1,4 @@
+package it.uniupo.boardhub.eventservice.controller.dto;
+
+public record ErrorResponse(String code, String message) {
+}
