# services/event-service/src/main/java/it/uniupo/boardhub/eventservice/controller/dto/SessionReachableCellsRequest.java
@@ -1,0 +1,8 @@
+package it.uniupo.boardhub.eventservice.controller.dto;
+
+public record SessionReachableCellsRequest(
+        String characterId,
+        String start,
+        int movementPoints
+) {
+}
